--- a/EpubSearcherAndroidApp/res/values/strings.xml
+++ b/EpubSearcherAndroidApp/res/values/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">EpubSearcherAndroidApp</string>
+    <string name="app_name">Epub Listing App</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="insert_user">Introduzca usuario</string>
     <string name="insert_pass">Introduzca contraseña</string>
     <string name="edit_user">Usuario</string>
     <string name="edit_pass">Password</string>
+    <string name="login_button">Aceptar</string>
 
 </resources>
