--- a/EpubSearcherAndroidApp/res/values/strings.xml
+++ b/EpubSearcherAndroidApp/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="edit_user">Usuario</string>
     <string name="edit_pass">Password</string>
     <string name="login_button">Aceptar</string>
+    <string name="listingButton">Listar Epubs</string>
 
 </resources>
