--- a/EpubSearcherAndroidApp/res/values/strings.xml
+++ b/EpubSearcherAndroidApp/res/values/strings.xml
@@ -8,7 +8,13 @@
     <string name="insert_pass">Introduzca contraseña</string>
     <string name="edit_user">Usuario</string>
     <string name="edit_pass">Password</string>
-    <string name="login_button">Aceptar</string>
+    <string name="login_button">Login</string>
     <string name="listingButton">Listar Epubs</string>
+    
+    <string-array name="order_array">
+        <item>Ordenar por fecha</item>
+        <item>Ordenar por nombre de archivo</item>
+        <item>Ordenar por nombre de epub</item>
+    </string-array>
 
 </resources>
